Fix category block and mobile visible

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -95,6 +95,10 @@ body {
     }
   }
 
+  .content__items {
+    display: block;
+  }
+
   &__clear {
     display: flex;
     align-items: center;
