--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -15,7 +15,7 @@
     display: flex;
 
     li {
-      background-color: #f9f9f9;
+      background-color: #edeaea;
       padding: 13px 30px;
       border-radius: 30px;
       margin-right: 10px;
